--- a/vignettes/get-started.Rmd
+++ b/vignettes/get-started.Rmd
@@ -40,29 +40,20 @@ library(llmr)
 library(mcpr)
 ```
 
-## Step 1: Set Up Your Provider
+## Step 1: Create Your First Agent
 
-First, you need to configure your LLM provider. We'll use Anthropic's Claude, but llmr also supports OpenAI.
-
-```{r provider-setup}
-# Create a provider instance
-provider <- new_anthropic()
-```
-
-**Important:** Replace `"your-anthropic-api-key-here"` with your actual Anthropic API key. You can get one from [Anthropic's website](https://console.anthropic.com/).
-
-## Step 2: Create Your First Agent
-
-An agent is an AI assistant that can use tools to help solve problems. Let's create a simple calculator agent:
+An agent is an AI assistant that can use tools to help solve problems. Let's create a simple calculator agent using Anthropic's Claude:
 
 ```{r create-agent}
-# Create an agent with a descriptive name
-agent <- new_agent("calculator", provider)
+# Create an agent with a descriptive name and the Anthropic provider factory
+agent <- new_agent("calculator", new_anthropic)
 ```
+
+**Important:** You'll need an Anthropic API key for this to work. You can get one from [Anthropic's website](https://console.anthropic.com/).
 
 That's it! You now have a basic agent, but it can't do much yet. Let's give it some capabilities.
 
-## Step 3: Create a Calculator Tool
+## Step 2: Create a Calculator Tool
 
 Tools allow your agent to perform specific actions. We'll create a calculator tool that can perform basic arithmetic operations:
 
