--- a/vignettes/mcp-integration.Rmd
+++ b/vignettes/mcp-integration.Rmd
@@ -147,11 +147,8 @@ Now let's create an agent that connects to our MCP server:
 library(llmr)
 library(mcpr)
 
-# Set up your provider (same as before)
-provider <- new_anthropic()
-
-# Create an agent
-agent <- new_agent("calculator", provider)
+# Create an agent with the Anthropic provider factory
+agent <- new_agent("calculator", new_anthropic)
 ```
 
 ## Step 3: Connect to the MCP Server
@@ -206,9 +203,9 @@ get_last_message(agent)
 #### 🚀 **Scalability**
 ```{r scalability-example}
 # Multiple agents can share the same calculator service
-agent1 <- new_agent("financial_advisor", provider)
-agent2 <- new_agent("math_tutor", provider)
-agent3 <- new_agent("data_analyst", provider)
+agent1 <- new_agent("financial_advisor", new_anthropic)
+agent2 <- new_agent("math_tutor", new_anthropic)
+agent3 <- new_agent("data_analyst", new_anthropic)
 
 # All connect to the same MCP server
 register_mcp(agent1, calculator_client)
